# mogli

./: .clang-format  CMakeLists.txt  Dockerfile.dev  Doxyfile  DoxygenLayout.xml  README.md  TODO.md  annotated.html  annotated_dup.js  classUserDto-members.html  classUserDto.html  classUserDto.js  classUserDto__coll__graph.map  classUserDto__inherit__graph.md5  classes.html  classmogli_1_1integrations_1_1GOGIntegration-members.html  classmogli_1_1integrations_1_1GOGIntegration.html  classmogli_1_1integrations_1_1GOGIntegration.js  classmogli_1_1integrations_1_1GOGIntegration__coll__graph.map  classmogli_1_1integrations_1_1GOGIntegration__coll__graph.md5  classmogli_1_1lib_1_1GameEntry-members.html  classmogli_1_1lib_1_1GameEntry.html  classmogli_1_1lib_1_1GameEntry.js  classmogli_1_1lib_1_1GameEntry__coll__graph.map  classmogli_1_1lib_1_1GameEntry__coll__graph.md5  classmogli_1_1lib_1_1IGameDatabase-members.html  classmogli_1_1lib_1_1IGameDatabase.html  classmogli_1_1lib_1_1IGameDatabase.js  classmogli_1_1lib_1_1LibraryManager-members.html  classmogli_1_1lib_1_1LibraryManager.html  classmogli_1_1lib_1_1LibraryManager.js  classmogli_1_1lib_1_1LibraryManager__coll__graph.map  classmogli_1_1lib_1_1LibraryManager__coll__graph.md5  classmogli_1_1lib_1_1Scanner-members.html  classmogli_1_1lib_1_1Scanner.html  classmogli_1_1lib_1_1Scanner.js  classmogli_1_1lib_1_1Scanner__coll__graph.map  classmogli_1_1lib_1_1Scanner__coll__graph.md5  classmogli_1_1rest_1_1Controller-members.html  classmogli_1_1rest_1_1Controller.html  (+188 more)
.devcontainer/: devcontainer.json
.github/workflows/: builddocs.yml  tests.yml
documentation/implementation/: library.md
documentation/media/: filesystem.md
include/mogli/: logging.hpp  mogli.hpp  sample.hpp
include/mogli/integrations/: gog.hpp
include/mogli/libmgr/: config.hpp  database.hpp  game.hpp  igameinfoprovider.hpp  manager.hpp  platforms.hpp
include/mogli/libmgr/database/soci/: std-path.hpp  std-reference_wrapper.hpp
include/mogli/libmgr/filesystem/: gameentry.hpp  scanner.hpp
include/mogli/libmgr/provider/: localprovider.hpp
include/mogli/rest/: config.hpp  endpoint.hpp
include/mogli/rest/controller/: controller.hpp
include/mogli/rest/dto/: game.hpp  user.hpp
include/mogli/utils/: generic_iterator.hpp  iterable.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+20 more)
src/: CMakeLists.txt  main.cpp
src/mogli/: logging.cpp  sample.cpp
src/mogli/libmgr/: manager.cpp
src/mogli/libmgr/database/: postgresql.cpp
src/mogli/libmgr/filesystem/: gameentry.cpp  scanner.cpp
src/mogli/libmgr/provider/: localprovider.cpp
src/mogli/rest/: endpoint.cpp
src/mogli/rest/controller/: controller.cpp
tests/: CMakeLists.txt  sample_test.cpp
tests/mogli/libmgr/filesystem/: gameentry_test.cpp
tests/testfiles/media/media1/Game 1/: note.md
tests/testfiles/media/media1/Game 3 [hint1-not in info] [hint2-also in yaml]/: info.yaml
